# hip-cuda-tests

./: .gitignore  CMakeLists.txt  README.md
scripts/: configure.sh  cuda_build_and_profile.sh  cuda_build_and_run.sh  hip_build_and_profile.sh  hip_build_and_run.sh
src/cuda/: CMakeLists.txt  common.cpp  common.h  kernels.cu.cpp  main.cpp
src/cuda/cases/: mem_transfers.cpp  mem_transfers.h  mem_transfers_kernel.cu.h  pass_writes.cpp  pass_writes.h  pass_writes_kernel.cu.h
src/hip/: CMakeLists.txt  hip_common.cpp  hip_common.h  kernels.hip.cpp  main.cpp
src/hip/cases/: mem_transfers.cpp  mem_transfers.h  pass_writes.cpp  pass_writes_kernel.hip.h
src/stb_impl/: CMakeLists.txt  stb_impl.cpp  stb_impl.h
